--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/usuario/detalleUsuario.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/usuario/detalleUsuario.zul
@@ -147,6 +147,19 @@
                                                                         <checkbox id="checkEstadoUsuario" />
                                                                         <!--textbox maxlength="1" id="txtEstadoUsuario" hflex="1" /-->
                                                                     </row>
+                                                                     <row>
+                                                                        <hbox>
+                                                                            <label value="Sucursal" />
+                                                                            <label value="*" style="color:red;font-size:10px" />
+                                                                        </hbox>
+                                                                        <combobox id="cmbSucursal" 
+                                                                                  autodrop="true"
+                                                                                  mold="rounded"
+                                                                                  autocomplete="true"
+                                                                                  hflex="1"/>
+                                                             
+                                                            
+                                                                    </row>
                                                                 </rows>
                                                             </grid>
                                                         </groupbox>
