--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/usuario/permisosRoles.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/usuario/permisosRoles.zul
@@ -8,7 +8,7 @@
             border="none"
             height="100%"
             width="100%"
-            use="sv.com.diserv.liquidaciones.web.ui.usuarios.ListaPermisoRolCtrl">
+            use="sv.com.diserv.web.ui.usuarios.ListaPermisoRolCtrl">
         <div sclass="z-toolbar" style="padding:0">
             <div sclass="z-toolbar" style="padding:0">
                 <hbox pack="stretch"
