--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/devoluciones/detalleDevolucion.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/devoluciones/detalleDevolucion.zul
@@ -165,6 +165,30 @@
                                                     </columns>
                                                     <rows>
                                                         <row>
+                                                             <hbox>
+                                                                <label value="Articulo:" />
+                                                                <label value="*" style="color:red;font-size:10px" />
+                                                            </hbox>
+                                                           <groupbox
+                                                                       mold="3d"
+                                                                       closable="false" contentStyle="border:0" style="margin:0 0 0 0 ">  
+                                                               
+                                                                <combobox id="cmbArticulo" 
+                                                                       autodrop="true"
+                                                                       mold="rounded"
+                                                                       autocomplete="true" width="175px"/>
+                                                           
+                                                                
+                                                                <button id="btnAdd"
+                                                           sclass="oT_ButtonWithIcon"
+                                                           image="/images/icon_package_get.gif"
+                                                           tooltiptext="Agregar Articulo"  />
+                                                            </groupbox>
+                                                            
+                                                             
+                                                        </row>
+                                                                                                                     
+                                                        <row id="rowICC">
                                                             <hbox>
                                                                 <label value="ICC/IMEI/Numero:" />
                                                                 <label value="*" style="color:red;font-size:10px" />
@@ -178,10 +202,10 @@
                                                                 maxlength="10"
                                                                 tooltiptext="ICC / IMEI / Numero"
                                                                  />
-                                                             <button id="btnNuevo"
+                                                             <button id="btnBuscar"
                                                            sclass="oT_ButtonWithIcon"
-                                                           image="/images/btnnew.gif"
-                                                           tooltiptext="Agregar articulos"  />
+                                                           image="/images/btnsearch.gif"
+                                                           tooltiptext="Buscar Articulo"  />
                                                              </groupbox>
                                                              
                                                         </row>
