--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/devoluciones/detalleDevolucion.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/devoluciones/detalleDevolucion.zul
@@ -50,8 +50,7 @@
         <borderlayout id="borderlayoutCustomer">
             <north border="none"></north>
             <center border="none">
-                <div id="divCenterCustomer">
-                    
+                <div id="divCenterCustomer">                    
                     <hbox
                           sclass="FDCenterNoBorder"
                           width="100%"
@@ -147,7 +146,7 @@
                                             </groupbox>
                                             <groupbox mold="3d" width="100%" height="300px">
                                                 <caption label="Lista de articulos a devolver" />
-                                                <groupbox height="100px"
+                                                <groupbox height="116px"
                                                     mold="3d"
                                                     closable="false">
                                                                                       
@@ -158,7 +157,7 @@
                                                            image="/images/btnnew.gif"
                                                            tooltiptext="Agregar articulos"  />
                                                </toolbar>-->
-                                                <grid sclass="GridPlain">
+                                                <grid sclass="GridPlain" >
                                                     <columns>
                                                         <column align="left" width="150px" />
                                                         <column width="100%" />
@@ -179,7 +178,7 @@
                                                                        autocomplete="true" width="175px"/>
                                                            
                                                                 
-                                                                <button id="btnAdd"
+                                                                <button id="btnBuscArt"
                                                            sclass="oT_ButtonWithIcon"
                                                            image="/images/icon_package_get.gif"
                                                            tooltiptext="Agregar Articulo"  />
@@ -202,15 +201,17 @@
                                                                 maxlength="10"
                                                                 tooltiptext="ICC / IMEI / Numero"
                                                                  />
-                                                             <button id="btnBuscar"
+                                                             <button id="btnBuscICC"
                                                            sclass="oT_ButtonWithIcon"
-                                                           image="/images/btnsearch.gif"
+                                                           image="/images/icon_package_get.gif"
                                                            tooltiptext="Buscar Articulo"  />
                                                              </groupbox>
                                                              
                                                         </row>
-                                                                    
+                                                    
+                                                                
                                                      </rows>
+                                                         
                                                 </grid>
                                                 </groupbox>
                                                 <paging id="pagingAsignacion" />
