--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/inventario/listaCompras.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/inventario/listaCompras.zul
@@ -49,30 +49,27 @@
                                 sclass="FDListBoxHeader1"
                                 width="5%"
                                 label="Id Movimiento" />
-                    <listheader id="lhIdProveedor"
-                                sclass="FDListBoxHeader1"
-                                width="40%"
-                                label="Proveedor" />
-                    <listheader id="lhProveedor"
-                                sclass="FDListBoxHeader1"
-                                width="40%"
-                                label="Nombre Proveedor" />
-                    <listheader id="lhRegistro"
-                                sclass="FDListBoxHeader1"
-                                width="5%"
-                                label=" registro iva" />
-                    <listheader id="lhEstado"
-                                sclass="FDListBoxHeader1"
-                                width="9%"
-                                label="Estado Movimiento" />
-                    <listheader id="lhObservacioens"
-                                sclass="FDListBoxHeader1"
-                                width="9%"
-                                label="Observaciones" />
                     <listheader id="lhFechaMovimiento"
                                 sclass="FDListBoxHeader1"
-                                width="9%"
-                                label="Fecha Movimiento" /> 
+                                width="15%"
+                                label="Fecha Movimiento" />
+                     <listheader id="lhNumero"
+                                sclass="FDListBoxHeader1"
+                                width="10%"
+                                label="Numero" />
+                     <listheader id="lhRegistro"
+                                sclass="FDListBoxHeader1"
+                                width="15%"
+                                label=" registro iva" />
+                    <listheader id="lhProveedor"
+                                sclass="FDListBoxHeader1"
+                                width="30%"
+                                label="Nombre Proveedor" />
+                    <listheader id="lhObservacioens"
+                                sclass="FDListBoxHeader1"
+                                width="40%"
+                                label="Observaciones" />
+                     
                 </listhead>
             </listbox>
         </groupbox>   
@@ -94,7 +91,7 @@
                         label="Id Movimiento" />
                     <listheader
                         sclass="FDListBoxHeader1"
-                        width="25%"
+                        width="40%"
                         label="Descripcion" />
                     <listheader
                         sclass="FDListBoxHeader1"
@@ -103,11 +100,7 @@
                     <listheader
                         sclass="FDListBoxHeader1"
                         width="17%"
-                        label="Unitario" />
-                    <listheader
-                        sclass="FDListBoxHeader1"
-                        width="17%"
-                        label="Excento " />
+                        label="Unitario" />                 
                     <listheader
                         sclass="FDListBoxHeader1"
                         width="14%"
